<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="admobkey">ca-app-pub-2714906120093430/5501655702</string>
    <string name="mobilecorekey">5WVQKOJQJ1O5Z8CNGMXOR2MPUWE1E</string>
    <string name="app_id">206328546243721</string>
    <string name="backclick">Click back again to quit!</string>
    <string name="app_name">Pretty girl 2014</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loadding, please wait ...</string>
    <string name="loadimg">Loadding image...</string>
    <string name="loadpreveouscomment">Load previous comments</string>
    <string name="loaderror">Could not load image</string>
    <string name="error_connection">Connection Error</string>
    <string name="error_connection_msg">Application need internet access. Please check your connection and try again later!</string>
    <string name="yearago">year ago</string>
    <string name="monthago">month ago</string>
    <string name="weekago">week ago</string>
    <string name="dayago">day ago</string>
    <string name="hourago">hour ago</string>
    <string name="minuteago">minute ago</string>
    <string name="now">now</string>
    <string name="wallpaper">Set Wallpaper</string>
    <string name="confirm_set_wall_paper">Do you want to set this image as wallpaper?</string>
    <string name="likesuccess">Like success!</string>
    <string name="likefail">Like Fail!</string>
    <string name="setwallpapersuccess">Set Wallpaper success!</string>
    <string name="writeacomment">Write a comment</string>
    <string name="post">Post</string>
    <string name="likepage">Like Page</string>
    <string name="moreapp">More app</string>
    <string name="contact">Feedback</string>
    <string name="error_loaddata_title">Load data error</string>
    <string name="error_loaddata_msg">Load data error.Please try again later and send feedback to us!</string>

    <string-array name="pages">
        <item>Hội Thích Ngắm Con Gái Xinh </item>
        <item>Gái 16+</item>
        <item>Kiều Max DJ</item>
        <item>Midu</item>
        <item>Tâm Tít</item>
        <item>Chi Pu</item>
        <item></item>
    </string-array>

</resources>